# todo

./: .gitignore  BmpFile.cpp  BmpFile.h  CMakeLists.txt  CMakeSettings.json  ImageMatrix.cpp  ImageMatrix.h  ImageView.cpp  ImageView.h  InputField.cpp  InputField.h  conanfile.txt  coordinateInputPanel.cpp  coordinateInputPanel.h  image.cpp  image.h  imgwidget.cpp  imgwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  matrixProcessing.cpp  matrixProcessing.h  processingWidget.cpp  processingWidget.h  сoordinateInputPanel.cpp  сoordinateInputPanel.h
bmp/: BmpFile.cpp  BmpFile.h  ImageMatrix.cpp  ImageMatrix.h  matrixProcessing.cpp  matrixProcessing.h  pixel.h  progressValue.cpp  progressValue.h
